--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body{
     color:#a0a0a0;
 }
 #result_short_url{
-    color:rgb(5, 5, 5);
+    font-size: 20px;
+    border-bottom: navajowhite;
+    color: #454545;
 }
 input{
     color: #fff
